# freedom

./: CMakeLists.txt  README-ru.md  README.md  main.cpp
.github/workflows/: main.yml
Controller/: abstract_controller.h  action_controller.cpp  action_controller.h  actions_controller.cpp  actions_controller.h  controller.cpp  controller.h  data_controller.cpp  data_controller.h  item_controller.cpp  item_controller.h  quest_controller.cpp  quest_controller.h
Conversations/: conversation.cpp  conversation.h
GameObject/: action.cpp  action.h  animated_object.h  animator.h  bot.cpp  bot.h  chest.cpp  chest.h  coordinates.cpp  coordinates.h  creature.cpp  creature.h  destroyable.cpp  destroyable.h  door.cpp  door.h  dynamic_object.cpp  dynamic_object.h  encrypted_method.h  game_map.cpp  game_map.h  game_time.cpp  game_time.h  hero.cpp  hero.h  interacting_object.h  item.cpp  item.h  object.cpp  object.h  point.cpp  point.h  police.cpp  police.h  route.cpp  route.h  schedule.cpp  schedule.h  shaking_object.cpp  shaking_object.h  (+8 more)
Model/: constants.h  image_manager.cpp  image_manager.h  model.cpp  model.h  settings.cpp  settings.h
Quests/: abstract_quest_node.cpp  abstract_quest_node.h  move_to_destination_quest_node.cpp  move_to_destination_quest_node.h  quest.cpp  quest.h  quest_node.cpp  quest_node.h
Resources/: bots.json  conversations.json  game_map.json  items.json  quests.json  resources.qrc  schedule.json
Resources/Jsons/: bots.json  conversations.json  game_map.json  items.json  quests.json  schedule.json
Resources/Styles/: conversation_window_styles.qss  main_menu_styles.qss  quest_tast_list_styles.qss  settings_menu_styles.qss  status_bar_styles.qss  view_styles.qss
Styles/: conversation_window_styles.qss  item_bar_styles.qss  status_bar_styles.qss  view_styles.qss
View/: bar_pack.cpp  bar_pack.h  conversation_window.cpp  conversation_window.h  game_widget.cpp  game_widget.h  item_bar.cpp  item_bar.h  main_menu.cpp  main_menu.h  quest_task_list.cpp  quest_task_list.h  settings_menu.cpp  settings_menu.h  status_bar.cpp  status_bar.h  view.cpp  view.h
